--- a/src/jump_start/package.xml
+++ b/src/jump_start/package.xml
@@ -16,6 +16,7 @@
   <depend>cv_bridge</depend>
   <depend>tf2_ros</depend>
   <depend>tf2_geometry_msgs</depend>
+  <depend>yolo_detector</depend>  <!-- 添加yolo_detector依赖 -->
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
