--- a/src/yolo_detector/package.xml
+++ b/src/yolo_detector/package.xml
@@ -12,13 +12,20 @@
   <depend>geometry_msgs</depend>
   <depend>cv_bridge</depend>
   <depend>std_msgs</depend>
+  
+  <!-- 消息生成依赖 -->
+  <build_depend>rosidl_default_generators</build_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
 
+  <buildtool_depend>ament_cmake</buildtool_depend>
+
   <export>
-    <build_type>ament_python</build_type>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
